[project]
name = "ksing-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "air[all]>=0.35.0,<1.0.0",
    "bokeh>=3.8.0,<4.0.0",
    "fastapi[standard]>=0.120.4,<1.0.0",
    "polars>=1.35.1,<2.0.0",
    "requests>=2.32.5,<3.0.0",
    "uvicorn[standard]>=0.38.0,<1.0.0",
]
   
[dependency-groups]
dev = [
    "pyrefly>=0.39.4,<1.0.0",
    "pythonanywhere>=0.17.0",
    "ruff>=0.14.3",
]


[tool.ruff]
line-length = 95
